--- a/src/pages/es/vectors.mdx
+++ b/src/pages/es/vectors.mdx
@@ -138,24 +138,24 @@ $$
 
 Obsérvese que la magnitud $\|\vec v\|$ es un escalar, y dividir por un escalar es lo mismo que multiplicar por el recíproco del escalar $1/\|\vec v\|$.
 
-## 9. Representación de vectores mediante sus vectores unitarios $\hat{\imath}$, $\hat{\jmath}$ y $\hat{k}$
-En un espacio bidimensional, un vector se puede representar mediante los vectores unitarios $\hat{\imath}$ y $\hat{\jmath}$. El vector unitario $\hat{\imath}$ es un vector de longitud 1 a lo largo del eje x, y el vector unitario $\hat{\jmath}$ es un vector de longitud 1 a lo largo del eje y.
+## 9. Representación de vectores mediante sus vectores unitarios $\hat\imath$, $\hat\jmath$ y $\hat k$
+En un espacio bidimensional, un vector se puede representar mediante los vectores unitarios $\hat\imath$ y $\hat\jmath$. El vector unitario $\hat\imath$ es un vector de longitud 1 a lo largo del eje x, y el vector unitario $\hat\jmath$ es un vector de longitud 1 a lo largo del eje y.
 
 Si tenemos un vector dado por sus componentes $\vec v = (x, y)$, se puede representar como:
 
 $$
-\vec v =  x\hat{\imath} + y\hat{\jmath} \tag{9.1}
+\vec v =  x\hat\imath + y\hat\jmath \tag{9.1}
 $$
 
-En un espacio tridimensional, un vector se puede representar mediante vectores unitarios $\hat{\imath}$, $\hat{\jmath}$ y $\hat{k}$. El vector unitario $\hat{\imath}$ es un vector de longitud 1 a lo largo del eje x, el vector unitario $\hat{\jmath}$ es un vector de longitud 1 a lo largo del eje y, y el vector unitario $\hat{k}$ es un vector de longitud 1 a lo largo del eje z.
+En un espacio tridimensional, un vector se puede representar mediante vectores unitarios $\hat\imath$, $\hat\jmath$ y $\hat k$. El vector unitario $\hat\imath$ es un vector de longitud 1 a lo largo del eje x, el vector unitario $\hat\jmath$ es un vector de longitud 1 a lo largo del eje y, y el vector unitario $\hat k$ es un vector de longitud 1 a lo largo del eje z.
 
 Si tenemos un vector expresado mediante sus componentes $\vec v = (x, y, z)$, se puede representar como:
 
 $$
-\vec v =  x\hat{\imath} + y\hat{\jmath} + z\hat{k} \tag{9.2}
+\vec v =  x\hat\imath + y\hat\jmath + z\hat k \tag{9.2}
 $$
 
-Esta suma vectorial se denomina **combinación lineal** de los vectores $\hat{\imath}$, $\hat{\jmath}$ y $\hat{k}$.
+Esta suma vectorial se denomina **combinación lineal** de los vectores $\hat\imath$, $\hat\jmath$ y $\hat k$.
 
 ## 10. Producto escalar de dos vectores
 El **producto escalar** de dos vectores es un número (escalar) que se obtiene multiplicando los componentes correspondientes de los dos vectores y luego sumando dichos productos.
@@ -183,7 +183,7 @@ $$
 Cuando el producto escalar de dos vectores es cero, se dice que ambos vectores son **ortogonales** o perpendiculares.
 
 ## 11. Proyección de un vector
-La **proyección de $\vec w$** sobre $\vec v$ o sobre la línea que contiene a $\vec v$, se denota como $\text{proj}_v \vec w$, es un vector que se encuentra en $\vec v$ tiene la misma dirección que $\vec w$ (si el ángulo entre $\vec v$ y $\vec w$ es inferior a 90 grados) u opuesto a $\vec v$ (si el ángulo entre $\vec v$ y $\vec w$ es mayor de 90 grados).
+La **proyección de $\vec w$ sobre $\vec v$** o sobre la línea que contiene a $\vec v$, se denota como $\text{proj}_v \vec w$, es un vector que se encuentra en $\vec v$ tiene la misma dirección que $\vec w$ (si el ángulo entre $\vec v$ y $\vec w$ es inferior a 90 grados) u opuesto a $\vec v$ (si el ángulo entre $\vec v$ y $\vec w$ es mayor de 90 grados).
 
 ![Figura 11.1: Proyección de w sobre v.](vector:svg1_6 "Proyección de w sobre v.")
 
