--- a/src/pages/es/index.mdx
+++ b/src/pages/es/index.mdx
@@ -15,6 +15,7 @@ lang: es
 1. [Vectores](/es/vectors)
 2. [Cinemática](/kinematics_es)
 3. [Geometría](/es/geometry)
+4. [Laboratorio de Migración a TypeScript](/es/TestPage)
 
 Hecho por M.A. Álvaro.
 
